<resources>
    <string name="app_name">feature-profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="date_format_d_MMM_yyyy">d MMM yyyy</string>
    <string name="date_format_yyyy_MM_dd">yyyy-MM-dd</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="nama">Nama</string>
    <string name="nisn">NISN</string>
    <string name="alamat">Alamat</string>
    <string name="kelas">Kelas</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="agama">Agama</string>
    <string name="asal_sekolah">Asal Sekolah</string>
    <string name="status_asal_sekolah">Status Asal Sekolah</string>
    <string name="nama_ayah">Nama Ayah</string>
    <string name="umur_ayah">Umur Ayah</string>
    <string name="agama_ayah">Agama Ayah</string>
    <string name="pendidikan_terakhir_ayah">Pendidikan Terakhir Ayah</string>
    <string name="pekerjaan_ayah">Pekerjaan Ayah</string>
    <string name="nama_ibu">Nama Ibu</string>
    <string name="umur_ibu">Umur Ibu</string>
    <string name="nip">NIP</string>
    <string name="email">Email</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="informasi_ayah">Informasi Ayah</string>
    <string name="informasi_ibu">Informasi Ibu</string>
    <string name="edit">Edit</string>
    <string name="submit">Submit</string>
    <string name="pendidikan_terakhir_ibu">Pendidikan Terakhir Ibu</string>
    <string name="agama_ibu">Agama Ibu</string>
    <string name="pekerjaan_ibu">Pekerjaan Ibu</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="bantuan">Bantuan</string>
</resources>